Migrate api to Java 17 using OpenRewrite UpgradeToJava17 recipe.